# BayesTyper

./: .gitignore  CMakeLists.txt  README.md
bayesTyper/ProducerConsumerQueue/src/: ProducerConsumerQueue.hpp  ProducerConsumerQueue.tpp
bayesTyper/src/: BitsetCompare.hpp  CMakeLists.txt  ChromosomePloidy.cpp  Combinator.cpp  Combinator.hpp  CountAllocation.cpp  CountAllocation.hpp  CountDistribution.cpp  CountDistribution.hpp  DiscreteSampler.cpp  DiscreteSampler.hpp  FrequencyDistribution.cpp  FrequencyDistribution.hpp  GenotypeWriter.cpp  GenotypeWriter.hpp  Genotypes.hpp  HaplotypeFrequencyDistribution.cpp  HaplotypeFrequencyDistribution.hpp  HybridHash.hpp  HybridHash.tpp  InferenceEngine.cpp  InferenceEngine.hpp  Kmer.hpp  Kmer.tpp  KmerCounter.cpp  KmerCounter.hpp  KmerCounts.cpp  KmerCounts.hpp  KmerCoverage.cpp  KmerCoverage.hpp  KmerFactory.cpp  KmerFactory.hpp  KmerHash.cpp  KmerHash.hpp  KmerInfo.hpp  LinearMap.hpp  LinearMap.tpp  NegativeBinomialDistribution.cpp  NegativeBinomialDistribution.hpp  OptionsContainer.hpp  (+30 more)
bayesTyperUtils/: CMakeLists.txt
bayesTyperUtils/src/: CMakeLists.txt  addRepeatAnnotation.cpp  addRepeatAnnotation.hpp  annotate.cpp  annotate.hpp  calcFilterStats.cpp  calcFilterStats.hpp  calcTrioConcordance.cpp  calcTrioConcordance.hpp  clean.cpp  clean.hpp  combine.cpp  combine.hpp  convertAlleleIdToSequence.cpp  convertAlleleIdToSequence.hpp  filter.cpp  filter.hpp  generateRelease.cpp  generateRelease.hpp  getSummary.cpp  getSummary.hpp  main.cpp  markDeNovo.cpp  markDeNovo.hpp  merge.cpp  merge.hpp  remove.cpp  remove.hpp  selectValidationVariants.cpp  selectValidationVariants.hpp  split.cpp  split.hpp  writeIndels.cpp  writeIndels.hpp
bayesTyperUtils/src/scripts/: CMakeLists.txt  addUniqueIdToVariants.cpp  evaluateCallset.cpp  filterNotCalledAlternativeAlleles.cpp  filterStructuralVariants.cpp  fixBayesTyperOutput.cpp  getBiallelicVariantStats.cpp  getCallsetOverlapStats.cpp  getSimpleAlleleSummary.cpp  prepareSimulationFemaleSamples.cpp  simplifyDoublePolymorphisms.cpp  splitMultiAllelicVariants.cpp
bayesTyperUtils/vcf++/: CMakeLists.txt
bayesTyperUtils/vcf++/include/vcf++/: Allele.hpp  Attribute.hpp  AttributeFilter.hpp  AttributeSet.hpp  Auxiliaries.hpp  CompareOperators.hpp  Contig.hpp  FastaReader.hpp  Sample.hpp  SampleAlleleAttributeFilter.hpp  Stats.hpp  Trio.hpp  Utils.hpp  Variant.hpp  VcfFile.hpp
bayesTyperUtils/vcf++/src/: Allele.cpp  Attribute.cpp  AttributeFilter.cpp  Auxiliaries.cpp  CMakeLists.txt  Contig.cpp  FastaReader.cpp  JoiningString.cpp  Regions.cpp  Sample.cpp  Stats.cpp  Trio.cpp  Utils.cpp  Variant.cpp  VcfFile.cpp
bayesTyperUtils/vcf++/test/: CMakeLists.txt  main.cpp
bayesTyperUtils/vcf++/test/unittests/: CMakeLists.txt  (+2 more)
include/bayesTyper/: BitsetCompare.hpp  ChromosomePloidy.hpp  Chromosomes.hpp  Combinator.hpp  CountAllocation.hpp  CountDistribution.hpp  DiscreteSampler.hpp  Filters.hpp  FrequencyDistribution.hpp  GenotypeWriter.hpp  Genotypes.hpp  HaplotypeFrequencyDistribution.hpp  HybridHash.hpp  HybridHash.tpp  InferenceEngine.hpp  InferenceUnit.hpp  Kmer.hpp  Kmer.tpp  KmerCounter.hpp  KmerCounts.hpp  KmerFactory.hpp  KmerHash.hpp  KmerStats.hpp  LinearMap.hpp  LinearMap.tpp  NegativeBinomialDistribution.hpp  Nucleotide.hpp  OptionsContainer.hpp  OptionsContainer.tpp  PerfectSet.hpp  PerfectSet.tpp  ProducerConsumerQueue.hpp  ProducerConsumerQueue.tpp  Regions.hpp  Sample.hpp  Sequence.hpp  SparsityEstimator.hpp  Utils.hpp  VariantCluster.hpp  VariantClusterGenotyper.hpp  (+7 more)
include/bayesTyperTools/: AddAttributes.hpp  Annotate.hpp  Combine.hpp  ConvertAllele.hpp  Filter.hpp  MakeBloom.hpp  ProducerConsumerQueue.tpp  addAttributes.hpp  annotate.hpp  bloomMaker.hpp  combine.hpp  convertAlleleId.hpp  filter.hpp  getSummary.hpp  merge.hpp  split.hpp  writeIndels.hpp
include/kmerBloom/: KmerBloom.hpp
include/vcf++/: Allele.hpp  Attribute.hpp  AttributeFilter.hpp  AttributeSet.hpp  Auxiliaries.hpp  CompareOperators.hpp  Contig.hpp  FastaReader.hpp  FastaRecord.hpp  JoiningString.hpp  ReductionOperator.hpp  Regions.hpp  Sample.hpp  SampleAlleleAttributeFilter.hpp  Stats.hpp  Trio.hpp  Utils.hpp  Variant.hpp  VcfFile.hpp  VcfMetaData.hpp
src/bayesTyper/: CMakeLists.txt  ChromosomePloidy.cpp  Chromosomes.cpp  Combinator.cpp  CountAllocation.cpp  CountDistribution.cpp  DiscreteSampler.cpp  Filters.cpp  FrequencyDistribution.cpp  GenotypeWriter.cpp  HaplotypeFrequencyDistribution.cpp  InferenceEngine.cpp  KmerCounter.cpp  KmerCounts.cpp  KmerFactory.cpp  KmerHash.cpp  KmerStats.cpp  NegativeBinomialDistribution.cpp  Regions.cpp  Sample.cpp  SparsityEstimator.cpp  VariantCluster.cpp  VariantClusterGenotyper.cpp  VariantClusterGraph.cpp  VariantClusterGraphPath.cpp  VariantClusterGroup.cpp  VariantClusterHaplotypes.cpp  VariantFileParser.cpp  main.cpp
src/bayesTyperTools/: AddAttributes.cpp  Annotate.cpp  CMakeLists.txt  Combine.cpp  ConvertAllele.cpp  Filter.cpp  MakeBloom.cpp  addAttributes.cpp  annotate.cpp  bloomMaker.cpp  combine.cpp  convertAlleleId.cpp  filter.cpp  getSummary.cpp  main.cpp  merge.cpp  split.cpp  writeIndels.cpp
src/bayesTyperTools/scripts/: CMakeLists.txt  addEditDistanceAndCondordance.cpp  addGenotypeQuality.cpp  addMaxGenotypePosterior.cpp  assessHaplotypeTransmissionSupport.cpp  collapseSummaryTable.cpp  convertNestedGenotypes.cpp  convertSeqToAlleleId.cpp  filterAlleleCallsetOrigin.cpp  filterStructuralVariants.cpp  generateDiplotypes.cpp  getGenomicIntervals.cpp  getKmerStats.cpp  getSummary.cpp  transferAlleleCallsetOrigin.cpp  transferAlleleFreqFields.cpp  writeIndels.cpp
src/kmerBloom/: CMakeLists.txt  KmerBloom.cpp
src/vcf++/: Allele.cpp  Attribute.cpp  AttributeFilter.cpp  AttributeSet.cpp  Auxiliaries.cpp  CMakeLists.txt  Contig.cpp  FastaReader.cpp  FastaRecord.cpp  JoiningString.cpp  Regions.cpp  Sample.cpp  SampleAlleleAttributeFilter.cpp  Stats.cpp  Trio.cpp  Utils.cpp  Variant.cpp  VcfFile.cpp  VcfMetaData.cpp
workflows/: call_candidates_and_genotype.smk  config.yaml  samples.tsv
workflows/rules/: call_candidates.smk  estimate_genotypes.smk
